# Test-Game

./: .gitignore  Cargo.toml  README.md  start_client.bat  start_server.bat
src/: global_commands.rs  main.rs  messages.rs  player_data.rs  text.rs  traits.rs
src/types/: classes.rs  effects.rs  mod.rs  towns.rs
src/types/areas/: altars.rs  area_settings.rs  bosses.rs  dungeons.rs  fountains.rs  gambling_den.rs  gates.rs  mod.rs  paths.rs  shop_areas.rs  stations.rs
src/types/entities/: mobs.rs  mod.rs  npcs.rs  players.rs
src/types/items/: bows.rs  consumables.rs  curses.rs  display_info.rs  inventories.rs  item_settings.rs  keys.rs  mod.rs  pass_books.rs  potions.rs  shops.rs  staves.rs  swords.rs
src/util/: access.rs  directions.rs  discord_bot.rs  mod.rs  new_player_options.rs  player_options.rs  server_host.rs  timed_events.rs  var_access.rs
test_game/: Cargo.toml
test_game/src/: main.rs  messages.rs  player_data.rs  text.rs  traits.rs
test_game/src/types/: effects.rs
test_game/src/types/areas/: altars.rs  bosses.rs  dungeons.rs  paths.rs  stations.rs
test_game/src/types/entities/: mobs.rs
test_game/src/types/items/: consumables.rs  curses.rs  display_info.rs  inventories.rs  pass_books.rs  potions.rs  shops.rs  staves.rs  swords.rs
test_game/src/util/: player_options.rs
test_game_client/: Cargo.toml
test_game_client/src/: main.rs
test_game_derive/: Cargo.toml
test_game_derive/src/: lib.rs
