[package]

name = "test_game"
version = "0.1.0"
authors = ["PersonTheCat <33143148+PersonTheCat@users.noreply.github.com>"]

[features]

default = []
discord = ["serenity"]
remote_clients = []

[dependencies]

rand = "0.4.0"
array-init = "0.0.4"
hashbrown = "0.1.6"
lazy_static = "1.2.0"
regex = "1.0.6"
serenity = { version = "0.5.11", optional = true }
test_game_derive = { path = "../test_game_derive" }