[package]

name = "test_game"
version = "0.1.2"
authors = ["PersonTheCat <33143148+PersonTheCat@users.noreply.github.com>"]
edition = "2018"

[features]

default = ["remote_clients"]
discord = ["serenity", "parking_lot"]
remote_clients = ["yyid"]

[dependencies]

rand = "0.4.0"
array-init = "0.0.4"
hashbrown = "0.1.6"
lazy_static = "1.2.0"
regex = "1.0.6"
serenity = { version = "0.5.11", optional = true }
parking_lot = { version = "0.6.0", optional = true }
yyid = { version = "*", optional = true }
test_game_derive = { path = "../test_game_derive" }